crates/osp-core/tests/compile_fail/c6_observed_evidence_literal.stderr
error[E0451]: fields `code_identity_key`, `observations` and `measured_at` of struct `ObservedCodeEvidence` are private
  --> tests/compile_fail/c6_observed_evidence_literal.rs:42:9
   |
41 |     let _evidence = ObservedCodeEvidence {
   |                     -------------------- in this type
42 |         code_identity_key: _key,
   |         ^^^^^^^^^^^^^^^^^ private field
43 |         observations,
   |         ^^^^^^^^^^^^ private field
44 |         measured_at: 0,
   |         ^^^^^^^^^^^ private field
